Resolves: tdf#95865 gtk3: disentangle Geometry handling

don't set our maGeometry directly, wait until gtk
confirms the result to update it. We're getting in
a real muddle here

Change-Id: If1f0b3ef50cabd8ddd5bca66f823bcbea1ecbcaf
Reviewed-on: https://gerrit.libreoffice.org/20396
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>